// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Updater Block Updater: handles duplicate inserts/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": -1,
      "block_id": 0,
      "block_time": 15,
      "id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "last_transaction_hash": null,
      "last_transaction_id": null,
      "last_transaction_time": null,
      "transaction_count": "0",
      "transaction_hash": null,
      "transaction_id": null,
      "transfer_count": "0",
    },
  ],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 0,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "wowowowowowowowo",
      "previous_block_hash": null,
      "previous_block_id": null,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 0,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [
    Object {
      "id": 1,
      "index": 0,
    },
  ],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`Block Updater Block Updater: handles insert/save 1`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": -1,
      "block_id": 0,
      "block_time": 15,
      "id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "last_transaction_hash": null,
      "last_transaction_id": null,
      "last_transaction_time": null,
      "transaction_count": "0",
      "transaction_hash": null,
      "transaction_id": null,
      "transfer_count": "0",
    },
  ],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 0,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "wowowowowowowowo",
      "previous_block_hash": null,
      "previous_block_id": null,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 0,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [
    Object {
      "id": 1,
      "index": 0,
    },
  ],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`Block Updater Block Updater: handles reverting inputs/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": -1,
      "block_id": 0,
      "block_time": 15,
      "id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "last_transaction_hash": null,
      "last_transaction_id": null,
      "last_transaction_time": null,
      "transaction_count": "0",
      "transaction_hash": null,
      "transaction_id": null,
      "transfer_count": "0",
    },
  ],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 0,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "wowowowowowowowo",
      "previous_block_hash": null,
      "previous_block_id": null,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 0,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [
    Object {
      "id": 1,
      "index": 0,
    },
  ],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`Block Updater Block Updater: handles reverting inputs/saves 2`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": -1,
      "block_id": 0,
      "block_time": 15,
      "id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "last_transaction_hash": null,
      "last_transaction_id": null,
      "last_transaction_time": null,
      "transaction_count": "0",
      "transaction_hash": null,
      "transaction_id": null,
      "transfer_count": "0",
    },
  ],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 0,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": "50959061250196698fdad3ce1ca6649b21689692ee6c1fcde4aad4d9fbd24220",
      "next_block_id": 1,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "wowowowowowowowo",
      "previous_block_hash": null,
      "previous_block_id": null,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 0,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "50959061250196698fdad3ce1ca6649b21689692ee6c1fcde4aad4d9fbd24220",
      "id": 1,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "ezezezezezezezez",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 0,
      "validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [
    Object {
      "id": 1,
      "index": 0,
    },
    Object {
      "id": 2,
      "index": 1,
    },
  ],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`Block Updater Block Updater: handles reverting inputs/saves 3`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": -1,
      "block_id": 0,
      "block_time": 15,
      "id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "last_transaction_hash": null,
      "last_transaction_id": null,
      "last_transaction_time": null,
      "transaction_count": "0",
      "transaction_hash": null,
      "transaction_id": null,
      "transfer_count": "0",
    },
  ],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 0,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "wowowowowowowowo",
      "previous_block_hash": null,
      "previous_block_id": null,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 0,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [
    Object {
      "id": 1,
      "index": 0,
    },
  ],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;
